add jvm options to fix build in jdk16+